--- a/cocome-maven-project/cloud-logic-service/cloud-logic-core-services/pom.xml
+++ b/cocome-maven-project/cloud-logic-service/cloud-logic-core-services/pom.xml
@@ -386,6 +386,11 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.cocome</groupId>
+			<artifactId>cloud-logic-core-impl</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.spec</groupId>
 			<artifactId>jboss-javaee-web-6.0</artifactId>
 			<type>pom</type>
