Add project with necessary annotation for Ecorification

--- a/cocome-maven-project/pom.xml
+++ b/cocome-maven-project/pom.xml
@@ -9,6 +9,7 @@
 	<name>CoCoME (Parent and Release Engineering)</name>
 
 	<modules>
+		<module>ecorification-utils</module>
 		<module>cloud-logic-service</module>
 		<module>cloud-web-frontend</module>
 	</modules>
