--- a/cocome-maven-project/cloud-logic-service/pom.xml
+++ b/cocome-maven-project/cloud-logic-service/pom.xml
@@ -16,7 +16,8 @@
 	<modules>
 		<module>java-old-utils</module>
 		<module>cloud-logic-core-api</module>
-		<module>cloud-logic-core-impl</module>
+		<!-- <module>cloud-logic-core-impl-ecorified</module> -->
+		<module>cloud-logic-core-impl-ecorified</module>
 		<module>cloud-logic-core-services</module>
 		<module>cloud-registry-service</module>
 		<module>cloud-registry-client</module>
