--- a/cocome-maven-project/cloud-logic-service/cloud-logic-core-impl-ecorified/pom.xml
+++ b/cocome-maven-project/cloud-logic-service/cloud-logic-core-impl-ecorified/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>log4j-1.2-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.cocome</groupId>
+			<artifactId>edu.kit.ipd.sdq.activextendannotations</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>de.kit.ipd</groupId>
 			<artifactId>java-old-utils</artifactId>
 			<version>1.1</version>
