Correct xtend-gen folder reference in ecorified project

--- a/cocome-maven-project/cloud-logic-service/cloud-logic-core-impl-ecorified/build.properties
+++ b/cocome-maven-project/cloud-logic-service/cloud-logic-core-impl-ecorified/build.properties
@@ -6,4 +6,4 @@ bin.includes = .,\
 output.. = bin/
 jars.compile.order = .
 source.. = src/main/java/,\
-           xtend-gen\\
+           src/main/xtend-gen
